--- a/pom.xml
+++ b/pom.xml
@@ -31,19 +31,28 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.applovin</groupId>
+      <artifactId>applovin-sdk</artifactId>
+      <version>12.5.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
-      <version>1.2.0</version>
+      <version>1.1.0</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.google.android.material</groupId>
       <artifactId>material</artifactId>
       <version>1.1.0</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.luffykou</groupId>
       <artifactId>android-common-utils</artifactId>
       <version>1.1.3</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
