--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poly</groupId>
   <artifactId>ntk_al</artifactId>
-  <version>1.4</version>
+  <version>1.5</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -23,7 +23,18 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
   <dependencies>
+    <dependency>
+      <groupId>com.applovin</groupId>
+      <artifactId>applovin-sdk</artifactId>
+      <version>12.5.0</version>
+    </dependency>
     <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
