--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poly</groupId>
   <artifactId>ntk_al</artifactId>
-  <version>1.5</version>
+  <version>1.6</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -28,6 +28,10 @@
             <id>central</id>
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
+	<repository>
+            <id>ifs</id>
+            <url>https://github.com/jiuzehk/ntk_ifs</url>
+        </repository>
     </repositories>
   <dependencies>
     <dependency>
@@ -36,19 +40,9 @@
       <version>12.5.0</version>
     </dependency>
     <dependency>
-      <groupId>androidx.appcompat</groupId>
-      <artifactId>appcompat</artifactId>
-      <version>1.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.android.material</groupId>
-      <artifactId>material</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.luffykou</groupId>
-      <artifactId>android-common-utils</artifactId>
-      <version>1.1.3</version>
+      <groupId>com.github.jiuzehk</groupId>
+      <artifactId>ntk_ifs</artifactId>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 </project>
