--- a/1.6/pom.xml
+++ b/1.6/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poly</groupId>
-  <artifactId>ntkmx</artifactId>
-  <version>1.7</version>
+  <artifactId>ntk_al</artifactId>
+  <version>1.6</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -28,6 +28,10 @@
             <id>central</id>
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
+	<repository>
+            <id>ifs</id>
+            <url>https://github.com/jiuzehk/ntk_ifs</url>
+        </repository>
     </repositories>
   <dependencies>
     <dependency>
@@ -37,8 +41,8 @@
     </dependency>
     <dependency>
       <groupId>com.github.jiuzehk</groupId>
-      <artifactId>ntkifs</artifactId>
-      <version>1.1</version>
+      <artifactId>ntk_ifs</artifactId>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 </project>
