--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install:
-  - FILE="-Dfile=ntk_al-1.6.aar"
-  - mvn install:install-file $FILE -DgroupId=com.poly -DartifactId=ntk_al -Dversion=1.6 -Dpackaging=aar -DpomFile=pom.xml
+  - FILE="-Dfile=ntkmx-1.7.aar"
+  - mvn install:install-file $FILE -DgroupId=com.poly -DartifactId=ntkmx -Dversion=1.7 -Dpackaging=aar -DpomFile=pom.xml
