--- a/1.11/pom.xml
+++ b/1.11/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poly</groupId>
   <artifactId>ntkmx</artifactId>
-  <version>1.12</version>
+  <version>1.11</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -34,6 +34,11 @@
       <groupId>com.applovin</groupId>
       <artifactId>applovin-sdk</artifactId>
       <version>12.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.jiuzehk</groupId>
+      <artifactId>ntkifs</artifactId>
+      <version>1.3</version>
     </dependency>
   </dependencies>
 </project>
